force-app/main/default/objects/Production__c/Production__c.object-meta.xml
<CustomObject>
    <label>Production</label>
    <nameField>
        <label>Production</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>