force-app/main/default/objects/Production__c/fields/Released_Count_Down__c.field-meta.xml
<CustomField>
    <fullName>Released_Count_Down__c</fullName>
    <formula>Release_Date__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Released Count Down</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>