force-app/main/default/objects/Production__c/recordTypes/Cast_Member.recordType-meta.xml
<RecordType>
    <fullName>Cast_Member</fullName>
    <active>true</active>
    <label>Cast Member</label>
</RecordType>