force-app/main/default/objects/Production__c/recordTypes/Crew_Member.recordType-meta.xml
<RecordType>
    <fullName>Crew_Member</fullName>
    <active>true</active>
    <label>Crew Member</label>
</RecordType>